<resources>
    <string name="app_name">Secrets</string>
    <string name="action_settings">Clear</string>
    <string name="appbar_scrolling_view_behavior">Secrets</string>
    <string name="encrypt_label">New</string>
    <string name="decrypt_label">View / Edit</string>
    <string name="password_hint">password</string>
    <string name="ok_label">OK</string>
    <string name="enter_password">Enter Your Password</string>"
    <string name="change_password">Change Password</string>"
    <string name="select_title">Select Title</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="title">title</string>
    <string name="view">View</string>
    <string name="add_new">Add New</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save_button">Save Button</string>
    <string name="add_button">Add Button</string>
</resources>
